src/objects/Detalle_Obligacion__c.object
<CustomObject>
    <fields>
        <fullName>Cifin__c</fullName>
        <label>Cifin</label>
        <referenceTo>Cifin__c</referenceTo>
        <relationshipLabel>Detalles Obligaciones</relationshipLabel>
        <relationshipName>Detalles_Obligaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detalle__c</fullName>
        <label>Detalle</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titulo__c</fullName>
        <label>Titulo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>